# pyContFrac

./: LICENSE  README.md  pyproject.toml
examples/: Padé Approximant.ipynb
src/contfrac/: __init__.py  continued_fractions.py  pade.py  stern_brocot.py  utils.py
tests/: test_arithmetic.py  test_pade.py  test_stern_brocot.py
