[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lucamarx-contfrac"
readme = "README.md"
version = "0.0.1"
authors = [{name="Luca Marx", email="luca@lucamarx.com"}]
license = {file="LICENSE"}
keywords = ["numbers", "continued", "fraction"]
description = "A continued fraction library"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = []
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/lucamarx/pyContFrac"
"Bug Tracker" = "https://github.com/lucamarx/pyContFrac/issues"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]
